--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,52 @@
     box-sizing: border-box;
 }
 
+body{
+    background-image: url('./assets/images/background.png')
+}
+
+h1{
+    text-align: center;
+}
+
 .gallery{
-    margin: 5px;
-    border: 1px solid #ccc;
+    line-height:2;
     float: left;
-    width: 180px;
+   -webkit-column-count: 5;
+    column-count: 5;
+    -webkit-column-gap: 5px;
+    column-gap: 2;
+    -moz-column-count: 2;
+    -moz-column-gap: 2px;
 }
 
 .gallery image{
     width: 100%;
     height: auto;
+    margin-bottom: 2px;
+    
+}
+
+@media (max-width:1000px) {
+    .gallery{
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
+    }    
+}
+
+@media (max-width:800px){
+    .gallery{
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+}
+
+@media (max-width:400px){
+    .gallery{
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
 }
